testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Issue890.adl
CONTEXT Issue890

RELATION isEnrolledFor[Student*Module]
RELATION isPartOf[Module*Course]
RELATION takes[Student*Module]
REPRESENT Student TYPE ALPHANUMERIC

INTERFACE Overview : "_SESSION"                  crud
COLS [ Students : V[SESSION*Student]             crud
        COLS    [ "Student" : I[Student]         cRuD
                , "Enrolled for" : isEnrolledFor cRUD
                , "Course" : takes               CRUD
                ]
     , Course : V[SESSION*Course]                CRuD   -- used for a box
        COLS    [ "Course" : I                   cRud   -- used for a field
                , "Modules" : isPartOf~                 -- CRUD is default
                ]
     , Modules : V[SESSION*Module]               cRud
        COLS    [ "Modules" : I                  cRuD
                , "Course" : isPartOf            cRud
                , "Students" : isEnrolledFor~    CRUD
                ]
     ]

ENDCONTEXT